// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSignature Registration Form > should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="MultiSignatureRegistrationForm--form-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Multisignature Registration
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Register Multisignature details below.
            </div>
          </div>
        </div>
        <div
          class="space-y-4 pt-5"
        >
          <fieldset
            class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
          >
            <div
              data-testid="DetailWrapper"
            >
              <div
                class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                data-testid="DetailLabel"
              >
                <div
                  class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                  data-testid="DetailLabelText"
                >
                  Addressing
                </div>
              </div>
              <div
                class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border flex flex-col gap-3 mt-0 sm:mt-2"
              >
                <div
                  class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
                >
                  <div
                    class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                  >
                    <div
                      class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5"
                    >
                      From
                    </div>
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                    >
                      <span
                        class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <div
                        class="relative grow leading-[17px] sm:leading-5 text-left"
                      >
                        <span
                          class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                        <span>
                           
                        </span>
                      </div>
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="text-theme-primary-400 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                        >
                          <div
                            style="height: 16px; width: 16px;"
                          >
                            <svg
                              id="copy"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <div>
            <div
              class="-mt-2 sm:mt-0"
            >
              <div
                class="space-y-4 rounded-lg -mx-4 p-4 bg-theme-secondary-background"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Multisignature Participant
                  </label>
                  <div>
                    <div
                      class="relative flex w-full items-center text-left"
                      data-testid="SelectRecipient__wrapper"
                    >
                      <div
                        class="relative w-full"
                        data-testid="SelectDropdown"
                      >
                        <div
                          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
                        >
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                              data-testid="select-list__input"
                              name="address"
                              readonly=""
                              tabindex="-1"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="w-full"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SelectRecipient__dropdown-menu"
                            role="combobox"
                          >
                            <div>
                              <label
                                for="SelectRecipient__dropdown-input"
                                id="SelectRecipient__dropdown-label"
                              />
                              <div
                                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                              >
                                <div
                                  class="relative flex h-full flex-1"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="SelectRecipient__dropdown-menu"
                                    aria-invalid="false"
                                    aria-labelledby="SelectRecipient__dropdown-label"
                                    autocomplete="off"
                                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default"
                                    data-testid="SelectDropdown__input"
                                    id="SelectRecipient__dropdown-input"
                                    name="address"
                                    placeholder="Address"
                                    type="text"
                                    value=""
                                  />
                                </div>
                                <div
                                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                  data-testid="Input__addon-end"
                                >
                                  <div
                                    class=""
                                  >
                                    <div
                                      class="flex items-center cursor-pointer rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                                      data-testid="SelectRecipient__select-recipient"
                                    >
                                      <div>
                                        <div
                                          style="height: 20px; width: 20px;"
                                        >
                                          <svg
                                            id="user"
                                            style="height: 100%; width: 100%;"
                                            viewBox="0 0 20 20"
                                            x="0"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                            y="0"
                                          >
                                            <g
                                              fill="none"
                                              stroke="currentColor"
                                              stroke-linecap="round"
                                              stroke-linejoin="round"
                                              stroke-width="2"
                                            >
                                              <circle
                                                cx="10"
                                                cy="5"
                                                r="4"
                                              />
                                              <path
                                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                              />
                                            </g>
                                          </svg>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-labelledby="SelectRecipient__dropdown-label"
                              id="SelectRecipient__dropdown-menu"
                              role="listbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 my-4 w-full"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Add Participant
                  </div>
                </button>
                <div>
                  <div
                    class="mb-3 overflow-hidden rounded border border-theme-secondary-300 bg-white last:mb-0 dark:border-theme-secondary-800 dark:bg-black sm:rounded-none sm:border-x-0 sm:border-b-0 sm:border-dashed sm:bg-transparent sm:pt-3 sm:dark:bg-transparent"
                    data-testid="AddParticipantItem"
                  >
                    <div
                      class="flex flex-col items-center space-y-4 sm:flex-row sm:space-x-4 sm:space-y-0"
                    >
                      <div
                        class="flex w-full flex-1 flex-col sm:w-auto sm:items-start sm:space-x-0 sm:space-y-1"
                      >
                        <div
                          class="flex w-full flex-1 flex-row items-center justify-between bg-theme-secondary-100 px-4 py-3 dark:bg-theme-secondary-900 sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                        >
                          <div
                            class="whitespace-nowrap text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-theme-secondary-500"
                          >
                            Participant #1
                          </div>
                          <div
                            class="sm:hidden"
                          >
                            <button
                              class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 space-x-0 p-0 text-theme-secondary-700 dark:text-theme-secondary-500"
                              data-testid="AddParticipantItem--mobile-deleteButton"
                              disabled=""
                              type="button"
                            >
                              <div
                                class="flex items-center space-x-2"
                              >
                                <div>
                                  <div
                                    style="height: 20px; width: 20px;"
                                  >
                                    <svg
                                      id="trash"
                                      style="height: 100%; width: 100%;"
                                      viewBox="0 0 20 20"
                                      x="0"
                                      xml:space="preserve"
                                      xmlns="http://www.w3.org/2000/svg"
                                      y="0"
                                    >
                                      <g
                                        fill="none"
                                        stroke="currentColor"
                                        stroke-linecap="round"
                                        stroke-linejoin="round"
                                        stroke-width="2"
                                      >
                                        <path
                                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                        />
                                      </g>
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                        <div
                          class="max-w-full overflow-auto px-4 pb-4 pt-3 sm:w-full sm:p-0"
                        >
                          <div
                            class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:hidden"
                          >
                            Address
                          </div>
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="font-semibold text-base text-sm leading-[17px] sm:text-base leading-5 text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="no-ligatures transition-colors duration-200"
                                data-testid="TruncateEnd"
                              >
                                ARK Wallet 1
                              </span>
                            </span>
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:text-base leading-5 text-theme-secondary-500 dark:text-theme-secondary-500 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="hidden sm:block"
                      >
                        <button
                          class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 p-3.5"
                          data-testid="AddParticipantItem--deleteButton"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div>
                              <div
                                style="height: 16px; width: 16px;"
                              >
                                <svg
                                  id="trash"
                                  style="height: 100%; width: 100%;"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <path
                                      d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <fieldset
            class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="minParticipants"
            >
              Minimum Required Signatures
            </label>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="MultiSignatureRegistrationForm__min-participants"
                  max="2"
                  min="2"
                  name="minParticipants"
                  type="number"
                  value="2"
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <span
                    class="pointer-events-none text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    out of 2
                  </span>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
            </label>
            <div
              class="relative"
            >
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    autocomplete="off"
                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-theme-secondary-text"
                    data-testid="InputCurrency"
                    disabled=""
                    name="fee"
                    type="text"
                    value="5"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 divide-none"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="-mr-4 flex h-14 w-22 flex-row justify-between border-l text-theme-secondary-700 dark:border-theme-secondary-700 sm:w-10 sm:flex-col border-theme-secondary-300"
                      >
                        <button
                          class="flex flex-1 items-center justify-center hover:bg-theme-primary-100 hover:text-theme-primary-600 active:bg-theme-primary-700 active:text-white disabled:cursor-default disabled:border-theme-secondary-300 disabled:bg-theme-secondary-100 disabled:text-theme-secondary-400 hover:dark:bg-theme-secondary-800 hover:dark:text-theme-primary-200 disabled:dark:border-theme-secondary-700 disabled:dark:bg-theme-secondary-800 disabled:dark:text-theme-secondary-600 border-b border-theme-secondary-400 dark:border-theme-secondary-700 border-r sm:border-r-0"
                          data-testid="InputFeeAdvanced__up"
                          disabled=""
                          type="button"
                        >
                          <div>
                            <div
                              style="height: 10px; width: 10px;"
                            >
                              <svg
                                id="chevron-up-small"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 10 10"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </div>
                        </button>
                        <button
                          class="flex flex-1 items-center justify-center hover:bg-theme-primary-100 hover:text-theme-primary-600 active:bg-theme-primary-700 active:text-white disabled:cursor-default disabled:border-theme-secondary-300 disabled:bg-theme-secondary-100 disabled:text-theme-secondary-400 hover:dark:bg-theme-secondary-800 hover:dark:text-theme-primary-200 disabled:dark:border-theme-secondary-700 disabled:dark:bg-theme-secondary-800 disabled:dark:text-theme-secondary-600"
                          data-testid="InputFeeAdvanced__down"
                          disabled=""
                          type="button"
                        >
                          <div>
                            <div
                              style="height: 10px; width: 10px;"
                            >
                              <svg
                                id="chevron-down-small"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 10 10"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form > should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="MultiSignature__review-step"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center leading-5 text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
        <div
          class="-mx-3 space-y-4 pt-5 sm:mx-0"
        >
          <fieldset
            class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
          >
            <div
              data-testid="DetailWrapper"
            >
              <div
                class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                data-testid="DetailLabel"
              >
                <div
                  class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                  data-testid="DetailLabelText"
                >
                  Addressing
                </div>
              </div>
              <div
                class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border flex flex-col gap-3 mt-0 sm:mt-2"
              >
                <div
                  class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
                >
                  <div
                    class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                  >
                    <div
                      class="no-ligatures w-20 flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 min-w-24"
                    >
                      From
                    </div>
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                    >
                      <span
                        class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <div
                        class="relative grow leading-[17px] sm:leading-5 text-left"
                      >
                        <span
                          class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                          data-testid="Address__address"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                        <span>
                           
                        </span>
                      </div>
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="text-theme-primary-400 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:text-white"
                        >
                          <div
                            style="height: 16px; width: 16px;"
                          >
                            <svg
                              id="copy"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <g
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              >
                                <path
                                  d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                />
                                <path
                                  d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                />
                              </g>
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                data-testid="DetailLabelText"
              >
                Transaction Summary
              </div>
            </div>
            <div
              class="mt-0 p-3 sm:mt-2 sm:p-0"
            >
              <div
                data-testid="DetailWrapper"
              >
                <div
                  class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                  data-testid="DetailLabel"
                >
                  <div
                    class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                    data-testid="DetailLabelText"
                  >
                    Transaction Summary
                  </div>
                </div>
                <div
                  class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 sm:border rounded-xl mt-0 sm:mt-2"
                >
                  <div
                    class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
                  >
                    <div
                      class="flex flex-col gap-3"
                    >
                      <div
                        class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                      >
                        <div
                          class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
                        >
                          Amount
                        </div>
                        <div
                          class="flex flex-row items-center gap-2"
                        >
                          <span
                            class="whitespace-nowrap font-semibold"
                            data-testid="Amount"
                          >
                            5 DARK
                          </span>
                        </div>
                      </div>
                      <div
                        class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                      >
                        <div
                          class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
                        >
                          Fee
                        </div>
                        <div
                          class="flex flex-row items-center gap-2"
                        >
                          <span
                            class="whitespace-nowrap font-semibold"
                            data-testid="Amount"
                          >
                            5 DARK
                          </span>
                        </div>
                      </div>
                      <div
                        class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                      >
                        <div
                          class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
                        >
                          Total
                        </div>
                        <div
                          class="flex flex-row items-center gap-2"
                        >
                          <span
                            class="whitespace-nowrap font-semibold"
                            data-testid="Amount"
                          >
                            5 DARK
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
                  >
                    <div
                      class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                    >
                      <div
                        class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto sm:min-w-36 sm:text-sm"
                      >
                        Confirmation Time
                      </div>
                      <div
                        class="flex flex-row items-center gap-2 lowercase sm:text-sm"
                      >
                        ~ 10 Seconds
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSignature Registration Form > should render transaction details 1`] = `
<DocumentFragment>
  <div
    class="flex items-center space-x-4 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800 border-t pt-4 sm:pt-6 no-ligatures"
    data-testid="TransactionFee"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction Fee
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <span
          class="whitespace-nowrap"
          data-testid="Amount"
        >
          5 DARK
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
